# algorithm-rs

./: .gitignore  README.md
algos/: Cargo.toml
algos/avl/: Cargo.toml
algos/avl/benches/: iter_bench.rs
algos/avl/src/: bst.rs  iterator.rs  lib.rs
algos/benchmark/: Cargo.toml
algos/benchmark/benches/: order_set_bench.rs
algos/bst/: Cargo.toml
algos/bst/src/: bst_derive.rs  lib.rs
algos/bst_util/: Cargo.toml
algos/bst_util/src/: bst_benches.rs  bst_tests.rs  lib.rs
algos/btree/: Cargo.toml
algos/btree/benches/: iter_bench.rs
algos/btree/src/: iter.rs  lib.rs
algos/immutable_avl/: Cargo.toml
algos/immutable_avl/benches/: iter_bench.rs
algos/immutable_avl/src/: iter.rs  lib.rs
algos/kmp/: Cargo.toml
algos/kmp/src/: lib.rs
algos/list/: Cargo.toml
algos/list/src/: lib.rs
algos/llrbtree/: Cargo.toml
algos/llrbtree/src/: lib.rs
algos/qsort/src/: lib.rs
algos/rbtree/: Cargo.toml
algos/rbtree/benches/: iter_bench.rs
algos/rbtree/src/: bst.rs  iterator.rs  lib.rs
algos/skiplist/: Cargo.toml
algos/skiplist/benches/: insert_bench.rs  iter_bench.rs
algos/skiplist/src/: iter.rs  lib.rs
algos/skiplist_safe/: Cargo.toml
algos/skiplist_safe/benches/: insert_bench.rs  iter_bench.rs
algos/skiplist_safe/src/: iter.rs  lib.rs
algos/sort/: Cargo.toml
algos/sort/benches/: sort_bench.rs
algos/sort/src/: lib.rs
algos/treap/: Cargo.toml  README.md
algos/treap/src/: bst.rs  lib.rs
algos/trie/: Cargo.toml
algos/trie/src/: compact_trie.rs  lib.rs  vec_trie.rs
guessing_game/: Cargo.toml
leetcode/: .rustfmt.toml  Cargo.toml  template.rs
leetcode/lc_tool/: Cargo.toml  template.rs
leetcode/lc_tool/src/: main.rs  problem.rs
leetcode/solutions/: Cargo.toml  gen_lib_rs.sh  get_problems.sh
leetcode/solutions/src/: challenge_perform_string_shifts.rs  lib.rs  n0001_two_sum.rs  n0005_longest_palindromic_substring.rs  n0006_zigzag_conversion.rs  n0007_reverse_integer.rs  n0010_regular_expression_matching.rs  n0012_integer_to_roman.rs  n0015_3sum.rs  n0017_letter_combinations_of_a_phone_number.rs  n0019_remove_nth_node_from_end_of_list.rs  n0020_valid_parentheses.rs  n0021_merge_two_sorted_lists.rs  n0022_generate_parentheses.rs  n0023_merge_k_sorted_lists.rs  n0024_swap_nodes_in_pairs.rs  n0026_remove_duplicates_from_sorted_array.rs  n0028_implement_strstr.rs  n0033_search_in_rotated_sorted_array.rs  n0034_find_first_and_last_position_of_element_in_sorted_array.rs  n0035_search_insert_position.rs  n0036_valid_sudoku.rs  n0037_sudoku_solver.rs  n0039_combination_sum.rs  n0041_first_missing_positive.rs  n0042_trapping_rain_water.rs  n0045_jump_game_ii.rs  n0046_permutations.rs  n0048_rotate_image.rs  n0049_group_anagrams.rs  n0050_powx_n.rs  n0051_n_queens.rs  n0053_maximum_subarray.rs  n0054_spiral_matrix.rs  n0055_jump_game.rs  n0057_insert_interval.rs  n0058_length_of_last_word.rs  n0059_spiral_matrix_ii.rs  n0062_unique_paths.rs  n0063_unique_paths_ii.rs  (+735 more)
leetcode/solutions/src/util/: linked_list.rs  matrix.rs  mod.rs  point.rs  tree.rs  vec_char.rs
leetcode/src/: challenge_counting_elements.rs  challenge_perform_string_shifts.rs  lib.rs  main.rs  n0020_valid_parentheses.rs  n0023_merge_k_sorted_lists.rs  n0028_implement_strstr.rs  n0033_search_in_rotated_sorted_array.rs  n0045_jump_game_ii.rs  n0048_rotate_image.rs  n0049_group_anagrams.rs  n0053_maximum_subarray.rs  n0055_jump_game.rs  n0068_text_justification.rs  n0071_simplify_path.rs  n0072_edit_distance.rs  n0076_minimum_window_substring.rs  n0078_subsets.rs  n0081_search_in_rotated_sorted_array_ii.rs  n0084_largest_rectangle_in_histogram.rs  n0085_maximal_rectangle.rs  n0087_scramble_string.rs  n0109_convert_sorted_list_to_binary_search_tree.rs  n0112_path_sum.rs  n0113_path_sum_ii.rs  n0114_flatten_binary_tree_to_linked_list.rs  n0120_triangle.rs  n0121_best_time_to_buy_and_sell_stock.rs  n0122_best_time_to_buy_and_sell_stock_ii.rs  n0123_best_time_to_buy_and_sell_stock_iii.rs  n0124_binary_tree_maximum_path_sum.rs  n0136_single_number.rs  n0146_lru_cache.rs  n0150_evaluate_reverse_polish_notation.rs  n0153_find_minimum_in_rotated_sorted_array.rs  n0154_find_minimum_in_rotated_sorted_array_ii.rs  n0155_min_stack.rs  n0162_find_peak_element.rs  n0173_binary_search_tree_iterator.rs  n0188_best_time_to_buy_and_sell_stock_iv.rs  (+53 more)
leetcode/src/util/: mod.rs  tree.rs
leetcode/weekly/: Cargo.toml
leetcode/weekly/src/: ch_01.rs  ch_02.rs  ch_03.rs  ch_04.rs  lib.rs  util
misc/guessing_game/src/: main.rs
misc/mysql_cli/: Cargo.toml
misc/mysql_cli/src/: main.rs
qsort/: Cargo.toml
qsort/src/: main.rs
