[package]
name = "avl"
version = "0.1.0"
authors = ["ajen <a839290570@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bst = { path = "../bst" }

[dev-dependencies]
rand = "0.7.3"
criterion = "0.3.3"
bst_util = { path = "../bst_util" }

[[bench]]
name = "iter_bench"
harness = false
