[package]
name = "avl"
version = "0.1.0"
authors = ["ajen <a839290570@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bst = { path = "../bst" ,features=["bst_derive"]}

[dev-dependencies]
rand = "0.7"
criterion = "0.3.3"
bst_util = { path = "../bst_util", features=["bst_bench", "bst_test"], default-features = false }

[[bench]]
name = "iter_bench"
harness = false
