[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
btree = { path = "../btree" }
rbtree = { path = "../rbtree" }
avl = { path = "../avl" }
treap = { path = "../treap" }
skiplist = { path = "../skiplist" }
rand = "0.8.5"
criterion = "0.3.6"
bst_util = { path = "../bst_util/" }

[[bench]]
name = "order_set_bench"
harness = false
