[package]
name = "benchmark"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
btree = { path = "../btree" }
rbtree = { path = "../rbtree" }
avl = { path = "../avl" }
treap = { path = "../treap" }
skiplist = { path = "../skiplist" }
rand.workspace = true
criterion.workspace = true
bst_util = { path = "../bst_util/" }

[[bench]]
name = "order_set_bench"
harness = false
