[package]
name = "bst_util"
version = "0.1.0"
authors = ["ajen <a839290570@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bst = {path = "../bst/"}
rand = "0.7"
criterion = { version = "0.3.3", optional = true }

[features]
default = ["bst_bench", "bst_test"]
bst_bench = ["criterion"]
bst_test = []
