[package]
name = "bst_util"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bst = {path = "../bst/"}
criterion = { workspace = true, default-features = false, optional = true }
rand.workspace = true

[features]
default = ["bst_bench", "bst_test"]
bst_bench = ["criterion"]
bst_test = []
