[package]
name = "btree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"

[dev-dependencies]
rand = "0.8.5"
bst_util = { path = "../bst_util", features=["bst_bench", "bst_test"] }
criterion = "0.3.6"

[[bench]]
name = "iter_bench"
harness = false
