[package]
name = "btree"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec.workspace = true

[dev-dependencies]
rand.workspace = true
bst_util = { path = "../bst_util", features=["bst_bench", "bst_test"] }
criterion.workspace = true

[[bench]]
name = "iter_bench"
harness = false
