[package]
name = "immutable_avl"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand.workspace = true
criterion.workspace = true
bst_util = { path = "../bst_util", features=["bst_bench", "bst_test"], default-features = false }

[[bench]]
name = "iter_bench"
harness = false
