[package]
name = "rbtree"
version = "0.1.0"
authors = ["ajen <ajen@yeahka.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bst = {path = "../bst"}

[dev-dependencies]
rand = "*"
criterion = "0.3.3"

[[bench]]
name = "iter_bench"
harness = false
