[package]
name = "rbtree"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bst = {path = "../bst", features = ["bst_derive"]}

[dev-dependencies]
criterion.workspace = true
bst_util = { path = "../bst_util" , features = ["bst_bench", "bst_test"]}
rand.workspace = true

[[bench]]
name = "iter_bench"
harness = false
