[package]
name = "skiplist"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.5"
rand.workspace = true

[dev-dependencies]
bst_util = { path = "../bst_util", features=["bst_bench", "bst_test"] }
criterion.workspace = true

[[bench]]
name = "iter_bench"
harness = false

[[bench]]
name = "insert_bench"
harness = false
