[package]
name = "skiplist"
version = "0.1.0"
authors = ["ajen <abdycjenha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"


[[bench]]
name = "iter_bench"
harness = false

[[bench]]
name = "insert_bench"
harness = false

[dev-dependencies]
criterion = "0.5.1"
