[package]
name = "skiplist_safe"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand.workspace = true


[[bench]]
name = "iter_bench"
harness = false

[[bench]]
name = "insert_bench"
harness = false

[dev-dependencies]
criterion.workspace = true
