[package]
name = "sort"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand.workspace = true

[dev-dependencies]
criterion = { workspace = true, default-features = false }

[[bench]]
name = "sort_bench"
harness = false
