[package]
name = "treap"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bst = {path = "../bst", features = ["bst_derive"]}
rand.workspace = true

[dev-dependencies]
bst_util = {path = "../bst_util", features = ["bst_test"]}
